force-app/main/default/objects/InventoryMove__c/InventoryMove__c.object-meta.xml
<CustomObject>
    <label>在庫移動</label>
    <nameField>
        <displayFormat>IVM-{000000}</displayFormat>
        <label>在庫移動名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>