force-app/main/default/objects/InventoryMove__c/fields/completion_date__c.field-meta.xml
<CustomField>
    <fullName>completion_date__c</fullName>
    <label>完了日</label>
    <type>Date</type>
</CustomField>