force-app/main/default/objects/InventoryMove__c/fields/completion_time__c.field-meta.xml
<CustomField>
    <fullName>completion_time__c</fullName>
    <label>完了時刻</label>
    <type>DateTime</type>
</CustomField>