force-app/main/default/objects/InventoryMove__c/fields/donated_from_company__c.field-meta.xml
<CustomField>
    <fullName>donated_from_company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>寄贈元企業</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>在庫移動</relationshipLabel>
    <relationshipName>inventory_moves</relationshipName>
    <type>Lookup</type>
</CustomField>