force-app/main/default/objects/InventoryMove__c/fields/donated_from_person__c.field-meta.xml
<CustomField>
    <fullName>donated_from_person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>寄贈元個人</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>受けた寄贈一覧</relationshipLabel>
    <relationshipName>inventory_moves</relationshipName>
    <type>Lookup</type>
</CustomField>