force-app/main/default/objects/InventoryMove__c/fields/donated_to_company__c.field-meta.xml
<CustomField>
    <fullName>donated_to_company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>寄贈先企業</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>在庫移動 (寄贈先企業)</relationshipLabel>
    <relationshipName>inventory_moves_donated_to</relationshipName>
    <type>Lookup</type>
</CustomField>