force-app/main/default/objects/InventoryMove__c/fields/donated_to_person__c.field-meta.xml
<CustomField>
    <fullName>donated_to_person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>寄贈先個人</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>在庫移動 (寄贈先個人)</relationshipLabel>
    <relationshipName>inventory_moves_donated_to</relationshipName>
    <type>Lookup</type>
</CustomField>