force-app/main/default/objects/InventoryMove__c/fields/move_status__c.field-meta.xml
<CustomField>
    <fullName>move_status__c</fullName>
    <label>移動ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>allocated</fullName>
            </value>
            <value>
                <fullName>complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>