force-app/main/default/objects/InventoryMove__c/fields/transfer_from_warehouse__c.field-meta.xml
<CustomField>
    <fullName>transfer_from_warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>移動元倉庫</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>出庫履歴</relationshipLabel>
    <relationshipName>inventory_moves_from</relationshipName>
    <type>Lookup</type>
</CustomField>