force-app/main/default/objects/InventoryMove__c/fields/transfer_to_warehouse__c.field-meta.xml
<CustomField>
    <fullName>transfer_to_warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>移動先倉庫</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>入庫履歴</relationshipLabel>
    <relationshipName>inventory_moves_to</relationshipName>
    <type>Lookup</type>
</CustomField>