force-app/main/default/objects/InventoryMove__c/recordTypes/disposal.recordType-meta.xml
<RecordType>
    <fullName>disposal</fullName>
    <active>true</active>
    <label>廃棄</label>
</RecordType>