force-app/main/default/objects/InventoryMove__c/recordTypes/inbound.recordType-meta.xml
<RecordType>
    <fullName>inbound</fullName>
    <active>true</active>
    <label>入庫</label>
</RecordType>