force-app/main/default/objects/InventoryMove__c/recordTypes/outbound.recordType-meta.xml
<RecordType>
    <fullName>outbound</fullName>
    <active>true</active>
    <label>出庫</label>
</RecordType>