force-app/main/default/objects/InventoryMove__c/recordTypes/transfer.recordType-meta.xml
<RecordType>
    <fullName>transfer</fullName>
    <active>true</active>
    <label>倉庫間移動</label>
</RecordType>