force-app/main/default/objects/InventoryMove__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>move_status__c</columns>
    <columns>transfer_from_warehouse__c</columns>
    <columns>transfer_to_warehouse__c</columns>
    <columns>completion_time__c</columns>
    <columns>donated_from_company__c</columns>
    <columns>donated_from_person__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>